--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name" translatable="false">Popular Movies</string>
     <string name="action_settings" translatable="false">Settings</string>
-    <string name="api_key" translatable="false">ae8e4db61f99ff8782a3a2bc487438c6</string>
+    <string name="api_key" translatable="false"></string>
     <string name="pref_sorting_label">Sorting Preference</string>
     <string name="pref_sorting_key" translatable="false">sorting_pref_key</string>
     <string name="pref_sorting_pop_label">Popularity</string>
